# DACKAR

./: .buildinfo  .gitattributes  .gitignore  LICENSE  README.md  contributors.html  dackar.toml  genindex.html  index.html  install.html  install_spacy3.5.html  knowledge_graph.html  nlp_readme.md  nltkDownloader.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  support.html
.github/: PULL_REQUEST_TEMPLATE.md
_modules/: index.html
_sources/: install_spacy3.5.rst.txt
autoapi/: index.html
data/: LML.xml  abbreviations.xlsx  alias.csv  cause_effect_keywords.csv  health_status_keywords_negative.csv  nlp_tests.txt  nyc_taxi_passengers.csv  tag_keywords_lists.xlsx
doc/: Introduction.tex  README.md  api.rst  conf.py  index.rst  install.rst  install_spacy3.5.rst  support.rst  user_manual.bib  user_manual.tex
docs/: conf.py  contributors.rst  index.rst  install.rst  install_spacy3.5.rst  knowledge_graph.rst  requirements.txt  support.rst
examples/: DACKAR_KG_NLP_Demo.ipynb  ER_schema_functionality_test.ipynb  LML_functionality_test.ipynb  PreprocessingDemo.ipynb  RuleBasedNLP.ipynb  WorkOrderProcessing.ipynb  Workflow_Demo.ipynb  abbreviationHandlerDemo.ipynb  alias_demo.ipynb  main_nlp_general.py  nlp.ipynb  nlp_custom_pipes.ipynb  numerizerPreprocessing.ipynb  test_anomalies.ipynb  test_anomaly.py  test_correlation.ipynb  test_ner.py  test_synset_similarity.ipynb  textacyPreprocessingMethods.ipynb
general_tests/: OPM_to_text_parsing.py  main_opm.py
notebooks/: DACKAR_KG_NLP_Demo.html  ER_schema_functionality_test.html  (+26 more)
(+370 files in other folders)
