[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dackar"
version = "0.1.0"
authors = [
  { name="Diego Mandelli", email="diego.mandelli@inl.gov" },
  { name="Congjian Wang", email="congjian.wang@inl.gov" },
  { name="Joshua J. Cogliati", email="joshua.cogliati@inl.gov" },
]
description = "Digital Analytics, Causal Knowledge Acquisition and Reasoning"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "spacy>=3.1",
  "tomli",
  "textacy",
  "matplotlib",
  "nltk",
  "coreferee",
  "beautifulsoup4",
  "networkx",
  "pysbd",
  "numerizer",
  "autocorrect",
  "contextualSpellCheck",
  "pywsd",
  "jupyterlab",
  "openpyxl",
  "quantulum3",
  "python>=3.9",
  "plotly",
  "xlrd"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/idaholab/DACKAR"
